--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,3 +18,9 @@ body,
     margin-top: 15px;
     font-size: 12px;
 }
+.el-cascader__dropdown {
+  height: 200px;
+}
+.el-cascader-panel {
+  height: 200px;
+}
