完成商品功能开发

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -24,3 +24,18 @@ body,
 .el-cascader-panel {
   height: 200px;
 }
+.el-steps {
+  margin: 15px 0;
+}
+.el-step__title {
+  font-size: 13px
+}
+.el-checkbox {
+  margin: 0 10px 0 0;
+}
+.ql-editor {
+  min-height: 300px;
+}
+.btnAdd {
+  margin-top: 15px;
+}
